--- a/pseudo.html
+++ b/pseudo.html
@@ -25,6 +25,18 @@
         a:visited{
             color:red;
         }
+        .paragraph:hover{
+            width: 300px;
+            height: 300px;
+            color: red;
+            background-color: black;
+            border-radius: 15px;
+            padding: 20px;
+        }
+        .paragraph{
+            margin-left:300px ;
+            background-color: tomato;
+        }
     </style>
 </head>
 <body>
@@ -36,5 +48,6 @@
     <a href="https://www.google.com/">Google e jao</a>
     <a href="https://web.programming-hero.com/">Programming Hero te jao</a>
     <a href="https://www.brandnew.ee/">brandnew te jao</a>
+    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae reiciendis sed aspernatur voluptatibus exercitationem, ipsa culpa voluptatum. Obcaecati laborum cupiditate nisi dignissimos architecto fugiat! Veritatis eum sapiente non quod fugit.</p>
 </body>
 </html>
