--- a/pseudo.html
+++ b/pseudo.html
@@ -37,6 +37,36 @@
             margin-left:300px ;
             background-color: tomato;
         }
+        .third-person:focus{
+            color: rgb(255, 255, 255);
+            background-color: blue;
+            font-size: 20px;
+        }
+        .pseudo:hover{
+            color:red;
+            background-color: green;
+        }
+        .second-person:focus{
+            color: green;
+            background-color: red;
+            font-size: 25px;
+        }
+        a:visited{
+            color: red;
+        }
+        .again:hover{
+            color:blue;
+            background-color: red;
+        }
+        .last-person:focus{
+            color: aqua;
+            background-color: black;
+            font-size: 25px;
+            text-transform: uppercase;
+        }
+        .new:visited{
+            color: aqua;
+        }
     </style>
 </head>
 <body>
@@ -49,5 +79,22 @@
     <a href="https://web.programming-hero.com/">Programming Hero te jao</a>
     <a href="https://www.brandnew.ee/">brandnew te jao</a>
     <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae reiciendis sed aspernatur voluptatibus exercitationem, ipsa culpa voluptatum. Obcaecati laborum cupiditate nisi dignissimos architecto fugiat! Veritatis eum sapiente non quod fugit.</p>
+    <input type="text">
+    <input type="text">
+    <input class="third-person" type="text">
+    <h2 class="pseudo">hello world</h2>
+    <input type="text">
+    <input class="second-person" type="text">
+    <input type="text">
+    <a target="_blank" href="https://www.google.com/">Google e jao</a>
+    <a href="www.google.com">link tik na hole kaj korbena</a>
+    <a href="www.google.com">Google e jao</a>
+    <h1 class="again">Hello world!</h1>
+    <input type="text" name="" id="">
+    <input type="text" name="" id="">
+    <input class="last-person" type="text" name="" id="">
+    <a class="new" href="https://www.google.com/">google e jao</a>
+    <a class="new" href="https://www.google.com/">google e jao</a>
+    <a class="new" href="https://www.bradhussey.ca/category/freelancing/web-design-development/">google e jao</a>
 </body>
 </html>
